--- a/templates/simple_html/bio.erb
+++ b/templates/simple_html/bio.erb
@@ -1,1 +1,9 @@
-<%= @first_name %>
+<div class="component bio">
+    <h2>Bio</h2>
+    <div class="line">
+        <span>Name</span><span><%= @first_name %> <%= @last_name %></span>
+    </div>
+    <div class="line">
+        <span>Email</span><span><%= @email %></span>
+    </div>
+</div>
